@@ -1,7 +1,10 @@
 # ensembl-data-pipeline
-Load genes from Ensembl into RGD.
+Load genes and transcripts from Ensembl into RGD.
 
-The following species are processed: rat, mouse, human, god, pig, bonobo and vervet.
+The following species are processed: rat, mouse, human, dog, pig, bonobo, vervet, chinchilla and molerat.
+
+For scaffold assemblies, GeneBank chromosome accessions are replaced with RefSeq accessions
+in order to easily compare NCBI and Ensembl locus data.
 
 XDB_IDS (external database ids)
 
